--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-<p><a href="2.%20Rehâvî%20Saz%20Semâî.pdf">Cliquez ici Pour Voir La Partition</a></p>
+<p><a href="2.%20Beyâtî%20Arabân%20Saz%20Semâî%20RYB.pdf">Cliquez ici Pour Voir La Partition</a></p>
 </html>
